Fix text align on button component (#10)

--- a/src/components/css/button.module.css
+++ b/src/components/css/button.module.css
@@ -5,11 +5,12 @@
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
-    display: inline-block;
+    display: flex;
     font-size: 16px;
     cursor: pointer;
-    width: 150px;
-    box-shadow: 5px 5px 3px rgb(196, 194, 194);
+    box-shadow: 5px 5px 3px rgb(224, 221, 221);
+    justify-content: center;
+    align-items: center;
 
   }
 
